# newauto

./: .gitignore  LICENSE  README.md  alt.py  index.html  nbconv.py  notes.md  pyproject.toml  render.py  style.css  vegaex.json  veh0132.ods
charts/: VEH0105_car_keep_fuel.json  VEH0105_veh_cat_fuel.json  VEH0145_electric_type_time.json
data/: df_VEH0270.csv  veh0133.ods  veh0171.ods  veh0172.ods
data/VEH0105/: countries.csv  regions.csv
nb_html/: VEH0105_prep.html  veh0105.html
notebooks/: Untitled.ipynb  VEH0105_prep.ipynb  VEH0105_region_map.html  VEH0105_veh_cat_fuel.json  VEH0145.ipynb  html_file.html  region_alt_fuels_table.html  veh0105.ipynb
templates/: template.html
