[tool.poetry]
name = "newauto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
altair = "^4.2.2"
ipykernel = "^6.20.2"
odfpy = "^1.4.1"
openpyxl = "^3.0.10"
markdown = "^3.4.1"
nbconvert = "^7.2.9"
jinja2 = "^3.1.2"
geopandas = "^0.12.2"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
